syntax = "proto3";

package csw_messages_params;

import "csw_messages_params/parameter.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
    single_file: true
};

message PbEvent {
    enum PbEventType {
        StatusEvent = 0;
        ObserveEvent = 1;
        SystemEvent = 2;
    }
    string prefix = 3;
    repeated PbParameter paramSet = 1;
    PbEventType eventType = 2;
}
